[package]
name = "mint"
version = "0.1.0"
authors = ["Jeremy Zheng <jitang.zheng@gmail.com>"]
edition = "2018"
description = "A totaly rewrite of PCD-Suite(by rust & react)."
homepage = "https://github.com/iapt-platform/mint"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
